--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -16,6 +16,10 @@
   font-size: 20pt;
 }
 
+#social_section {
+  padding-bottom: 100px;
+}
+
 .highlight {
   color: #facb00
 } 
@@ -48,6 +52,7 @@
 
 #socialmedia_list {
   list-style: none;
+  
 }
 
 .socialmedia_item {
@@ -55,5 +60,11 @@
 }
 
 .socialmedia_item:not(:first-of-type){
-  margin-left: 10px;
+  margin-left: 30px;
+}
+
+.socialmedia_logo {
+  width: 50px;
+  height: 50px;
+  color: #FFF;
 }
